--- a/ui/style.css
+++ b/ui/style.css
@@ -405,45 +405,70 @@ input[type="button"] {
 body {
   margin: 10px;
   background-color: #ddd;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
 
 .page-home {
-  text-align: center; }
-  .page-home section {
+  text-align: center; 
+}
+
+.page-home section {
     max-width: 600px;
     margin: 50px auto;
     padding: 40px;
     position: relative;
     background-color: rgba(255, 255, 255, 0.7);
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); }
-    .page-home section:first-child {
-      background-image: url(../img/tools.png);
-      background-position: center; }
-    .page-home section h1 {
-      font-weight: 700;
-      line-height: 1;
-      margin: 20px 0;
-      letter-spacing: 1px; }
-  .page-home img {
-    max-width: 100%; }
-  .page-home .flex-video-wrap {
-    max-width: 640px;
-    display: inline-block;
-    width: 100%; }
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.page-home section:first-child {
+  background-image: url(../img/tools.png);
+  background-position: center;
+}
+
+.page-home section h1 {
+  font-weight: 700;
+  line-height: 1;
+  margin: 20px 0;
+  letter-spacing: 1px; 
+}
+
+.page-home img {
+max-width: 100%; 
+}
+
+.page-home .flex-video-wrap {
+max-width: 640px;
+display: inline-block;
+width: 100%; 
+}
+
+.page-home pre {
+text-align: left;
+font-family: "Fira Mono", monospace;
+font-size: 30px;
+color: #d0d0d0;
+position: absolute;
+top: -50px;
+left: -50px;
+z-index: -1;
+pointer-events: none; 
+}
+
+@media (max-width: 500px) {
   .page-home pre {
-    text-align: left;
-    font-family: "Fira Mono", monospace;
-    font-size: 30px;
-    color: #d0d0d0;
-    position: absolute;
-    top: -50px;
-    left: -50px;
-    z-index: -1;
-    pointer-events: none; }
-    @media (max-width: 500px) {
-      .page-home pre {
-        font-size: 20px; } }
-  .page-home article {
-    margin-bottom: 50px; }
-    .page-home article:last-child {
-      margin-bottom: 0px; }
+    font-size: 20px; } 
+}
+
+.page-home article {
+margin-bottom: 50px; 
+}
+
+.page-home article:last-child {
+  margin-bottom: 0px;
+}
+
+.news{
+   margin-top: 0px;
+}
+
