[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -424,7 +424,7 @@ body {
 }
 
 .page-home section:first-child {
-  background-image: url(../img/tools.png);
+  background-image: url(https://preview.ibb.co/gR3S6v/tools.png);
   background-position: center;
 }
 
