--- a/ui/style.css
+++ b/ui/style.css
@@ -188,44 +188,53 @@ input {
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
-  padding: 0; }
+  padding: 0;
+}
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-  height: auto; }
+  height: auto;
+}
 
 input[type="search"] {
   -webkit-appearance: textfield;
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
-  box-sizing: content-box; }
+  box-sizing: content-box;
+}
 
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+}
 
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em; }
+  padding: 0.35em 0.625em 0.75em; 
+}
 
 legend {
   border: 0;
-  padding: 0; }
+  padding: 0; 
+}
 
 textarea {
-  overflow: auto; }
+  overflow: auto; 
+}
 
 optgroup {
   font-weight: bold; }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0; 
+}
 
 td,
 th {
-  padding: 0; }
+  padding: 0; 
+}
 
 body {
   background-color: white;
@@ -234,76 +243,94 @@ body {
   font-family: "Fira Sans", sans-serif;
   color: #666;
   -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: 100%; }
+  -webkit-text-size-adjust: 100%; 
+}
 
 ::selection {
-  background: #FFF498; }
+  background: #FFF498; 
+}
 
 ::-moz-selection {
-  background: #FFF498; }
+  background: #FFF498;
+}
 
 img::selection {
-  background: transparent; }
+  background: transparent;
+}
 
 img::-moz-selection {
-  background: transparent; }
+  background: transparent;
+}
 
 body {
-  -webkit-tap-highlight-color: #FFF498; }
+  -webkit-tap-highlight-color: #FFF498;
+}
 
 a {
   color: #0074D9;
   text-decoration: none;
-  outline: 0; }
+  outline: 0;
+}
   a:hover, a:focus {
     color: #40a6ff; }
 
 .gigantic, .huge, .large, .bigger, .big,
 h1, h2, h3, h4, h5, h6 {
   color: #222;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .gigantic {
   font-size: 110px;
   line-height: 1.09;
-  letter-spacing: -2px; }
+  letter-spacing: -2px;
+}
 
 .huge, h1 {
   font-size: 68px;
   line-height: 1.05;
-  letter-spacing: -1px; }
+  letter-spacing: -1px;
+}
 
 .large, h2 {
   font-size: 42px;
-  line-height: 1.14; }
+  line-height: 1.14;
+}
 
 .bigger, h3 {
   font-size: 26px;
-  line-height: 1.38; }
+  line-height: 1.38;
+}
 
 .big, h4 {
   font-size: 22px;
-  line-height: 1.38; }
+  line-height: 1.38;
+}
 
 .small, small {
   font-size: 10px;
-  line-height: 1.2; }
+  line-height: 1.2;
+}
 
 p {
-  margin: 0 0 20px 0; }
+  margin: 0 0 20px 0;
+}
 
 em {
-  font-style: italic; }
+  font-style: italic;
+}
 
 strong {
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 hr {
   border: solid #ddd;
   border-width: 1px 0 0;
   clear: both;
   margin: 10px 0 30px;
-  height: 0; }
+  height: 0;
+}
 
 .button,
 button,
@@ -352,7 +379,8 @@ input[type="button"] {
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+}
 
 .avatar {
   width: 80px;
@@ -361,7 +389,8 @@ input[type="button"] {
   margin-right: 10px;
   -webkit-flex-shrink: 0;
   -ms-flex-negative: 0;
-  flex-shrink: 0; }
+  flex-shrink: 0;
+}
 
 .fork-tag {
   position: absolute;
@@ -371,7 +400,8 @@ input[type="button"] {
   color: white;
   padding: 2px 6px;
   transition: all 0.3s ease-in-out;
-  transform-origin: top right; }
+  transform-origin: top right;
+}
   .fork-tag:hover {
     color: white;
     animation: wiggle 0.4s linear 1; }
@@ -392,7 +422,8 @@ input[type="button"] {
   margin-bottom: 0.88889rem;
   overflow: hidden;
   padding-bottom: 56%;
-  position: relative; }
+  position: relative;
+}
 
 .flex-video iframe,
 .flex-video object,
@@ -402,7 +433,8 @@ input[type="button"] {
   position: absolute;
   top: 0;
   width: 100%;
-  left: 0; }
+  left: 0;
+}
 
 body {
   margin: 10px;
