--- a/ui/style.css
+++ b/ui/style.css
@@ -455,7 +455,7 @@ body {
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.page-home section .titel-bg {
+.page-home section:first-child {
   background-image: url(https://preview.ibb.co/gR3S6v/tools.png);
   background-position: center;
 }
