--- a/ui/style.css
+++ b/ui/style.css
@@ -627,3 +627,21 @@ input[type="submit"].login:focus{outline: none;}
     margin-left: 2px;
     border: none;
 }
+
+div.well{
+  height: 250px;
+} 
+
+.Absolute-Center {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.Absolute-Center.is-Responsive {
+  width: 50%; 
+  height: 50%;
+  min-width: 200px;
+  max-width: 400px;
+  padding: 40px;
+}
